--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <h1>Welcome to My Midterm Server!</h1>
         <p><strong>Student Number:</strong> 100903717</p>
-        <p><strong>Student Name:</strong> Adarsh Mishra</p>
+        <p><strong>Student Name:</strong> Adarsh Mishra Testing</p>
     </div>
 </body>
 </html>
